--- a/config/config_single_video.yaml
+++ b/config/config_single_video.yaml
@@ -4,6 +4,7 @@ Development:
   DEBUG_FLAG: 0             # 1 ... activate 0 ... deactivate
 
 PreProcessing:
+  SCALE_FACTOR: 0.5         # 0.0 - 1.0 scaling factor of image
   CONVERT2GRAY: 0           # 0 or 1   --> not working yet
   DOWNSCALE: 1              # 0 or 1
   HISTOGRAM_EQU: 'none'     # "clahe" or "classic" or "none"
