--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,8 +4,9 @@ Development:
   DEBUG_FLAG: 0             # 1 ... activate 0 ... deactivate
 
 PreProcessing:
-  SCALE_FACTOR: 0.5         # 0.0 - 1.0 scaling factor of image
+  RESIZE_DIM: 128, 128      # resize dimension -> height, width
   CONVERT2GRAY: 0           # 0 or 1   --> not working yet
+  CROP: 1                   # 0 or 1
   DOWNSCALE: 1              # 0 or 1
   HISTOGRAM_EQU: 'none'  # "clahe" or "classic" or "none"
 
