--- a/config/config_single_video.yaml
+++ b/config/config_single_video.yaml
@@ -11,6 +11,8 @@ PreProcessing:
   HISTOGRAM_EQU: 'none'     # "clahe" or "classic" or "none"
 
 SbdCore:
+  CANDIDATE_SELECTION: 0    # 1 ... activate 0 ... deactivate
+
   SAVE_RAW_RESULTS: 1       # 1 ... yes 0 ... no
   PATH_RAW_RESULTS: "/caa/Homes01/dhelm/working/pycharm_vhh_sbd/Demo/results_raw/"
   PREFIX_RAW_RESULTS: "results_raw_"
@@ -21,7 +23,6 @@ SbdCore:
   PREFIX_FINAL_RESULTS: "results_"
   POSTFIX_FINAL_RESULTS: "csv"
 
-  #PATH_VIDEOS: "/caa/Projects02/vhh/private/dzafirova/sbd_efilms_db_20190621/videos_converted/"
   PATH_VIDEOS: "/caa/Projects02/vhh/private/database_nobackup/IMediaCities_datasets/IMC_database/videos/"
   THRESHOLD: 0.8
   BACKBONE_CNN: "squeezenet"    # vgg16 OR squeezenet
@@ -40,4 +41,6 @@ Visualization:
 
 Evaluation:
   SAVE_EVAL_RESULTS: 1
-  PATH_EVAL_RESULTS: "/caa/Homes01/dhelm/working/pycharm_vhh_sbd/Develop/"
+  PATH_RAW_RESULTS: "/caa/Homes01/dhelm/working/pycharm_vhh_sbd/Demo/results_raw/"
+  PATH_EVAL_RESULTS: "/caa/Homes01/dhelm/working/pycharm_vhh_sbd/Develop/Evaluation/"
+  PATH_GT_ANNOTATIONS: "/caa/Projects02/vhh/private/database_nobackup/VHH_datasets/annotations/ShotBoundaryDetection/imediacities/sbd_imc_annotations_20191231.csv"
