--- a/config/config_debug.yaml
+++ b/config/config_debug.yaml
@@ -16,15 +16,17 @@ SbdCore:
   SAVE_RAW_RESULTS: 1       # 1 ... yes 0 ... no
   PATH_RAW_RESULTS: "/caa/Homes01/dhelm/working/pycharm_vhh_sbd/Demo/results_raw/"
   PREFIX_RAW_RESULTS: "results_raw_"
-  POSTFIX_RAW_RESULTS: "csv"
+  POSTFIX_RAW_RESULTS: "npy"
 
   SAVE_FINAL_RESULTS: 1     # 1 ... yes 0 ... no
   PATH_FINAL_RESULTS: "/caa/Homes01/dhelm/working/pycharm_vhh_sbd/Demo/results_final/"
   PREFIX_FINAL_RESULTS: "results_"
   POSTFIX_FINAL_RESULTS: "csv"
 
-  PATH_VIDEOS: "/caa/Projects02/vhh/private/database_nobackup/IMediaCities_datasets/IMC_database/videos_subset/"
+  PATH_VIDEOS: "/caa/Projects02/vhh/private/database_nobackup/IMediaCities_datasets/IMC_database/videos/"
+  THRESHOLD_MODE: 'adaptive'    # adaptive OR fixed
   THRESHOLD: 0.8
+  WINDOW_SIZE: 10               # only for adaptive mode
   BACKBONE_CNN: "squeezenet"    # vgg16 OR squeezenet
   SIMILARITY_METRIC: "cosine"    # euclidean OR cosine
 
