- add new config file for vhh test - some modifications - add new parameter ALPHA for adaptive mode - modifiy transforms (pytorch) to resize input image correctly - modify requirements.txt to install correct pytorch version

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-torchvision #+cu92 -f https://download.pytorch.org/whl/torch_stable.html
-torch  #+cu92 -f https://download.pytorch.org/whl/torch_stable.html
-keras_squeezenet
-keras==2.2.0
-tensorflow-gpu==1.12.0
+torch==1.5.0+cu101
+torchvision==0.6.0+cu101
 Pillow
 opencv-python
 matplotlib
