--- a/config/config_vhh_test.yaml
+++ b/config/config_vhh_test.yaml
@@ -2,7 +2,7 @@
 Development:
   ###
   # This parameter is used to activate or deactivate the debug mode.
-  DEBUG_FLAG: 1             # 1 ... activate 0 ... deactivate
+  DEBUG_FLAG: 0             # 1 ... activate 0 ... deactivate
 
 PreProcessing:
   ###
@@ -54,13 +54,13 @@ SbdCore:
 
   ###
   # This parameter is used to specify the path to the videos.
-  PATH_VIDEOS: "/data/share/maxrecall_vhh_mmsi/videos/downloaded/"
+  PATH_VIDEOS: "/data/share/maxrecall_vhh_mmsi/develop/videos/downloaded/"
   ###
   # This parameter is used to specify the threshold mode (adaptive OR fixed).
-  THRESHOLD_MODE: 'adaptive'    # adaptive OR fixed
+  THRESHOLD_MODE: 'fixed'    # adaptive OR fixed
   ###
   # This parameter is used to specify the threshold (only in fixed threshold mode - [0-1]).
-  THRESHOLD: 0.8                 # value [0-1]
+  THRESHOLD: 0.2                 # value [0-1]
   ###
   # This parameter is used to specify the adaptive threshold.
   ALPHA: 2.0                     # value > 1
@@ -85,10 +85,11 @@ Evaluation:
   SAVE_EVAL_RESULTS: 0
   ###
   # This parameter is used the raw results path.
-  PATH_RAW_RESULTS: "/data/share/maxrecall_vhh_mmsi/videos/results/cmc/raw_results/"
+  PATH_RAW_RESULTS: "/data/share/maxrecall_vhh_mmsi/videos/results/sbd/raw_results/"
   ###
   # This parameter is used to specify the path to store the evaluation results path.
-  PATH_EVAL_RESULTS: "/data/share/maxrecall_vhh_mmsi/videos/results/cmc/develop/"
+  PATH_EVAL_RESULTS: "/data/share/maxrecall_vhh_mmsi/videos/results/sbd/develop/"
+
   ###
   # This parameter is used to groundtruth annotations used for evaluation.
   PATH_GT_ANNOTATIONS: "/caa/Projects02/vhh/private/database_nobackup/VHH_datasets/annotations/ShotBoundaryDetection/imediacities/sbd_imc_annotations_20191231.csv"
