--- a/config/config_vhh_test.yaml
+++ b/config/config_vhh_test.yaml
@@ -1,6 +1,6 @@
 
 Development:
-  DEBUG_FLAG: 1             # 1 ... activate 0 ... deactivate
+  DEBUG_FLAG: 0             # 1 ... activate 0 ... deactivate
 
 PreProcessing:
   RESIZE_DIM: 128, 128      # resize dimension -> height, width
@@ -10,23 +10,23 @@ PreProcessing:
   HISTOGRAM_EQU: 'none'     # "clahe" or "classic" or "none"
 
 SbdCore:
-  CANDIDATE_SELECTION: 0    # 1 ... activate 0 ... deactivate
+  CANDIDATE_SELECTION: 1    # 1 ... activate 0 ... deactivate
 
   SAVE_RAW_RESULTS: 1       # 1 ... yes 0 ... no
-  PATH_RAW_RESULTS: "/data/share/maxrecall_vhh_mmsi/videos/results/sbd/raw_results/"
+  PATH_RAW_RESULTS: "/data/share/maxrecall_vhh_mmsi/develop/videos/results/sbd//"
   PREFIX_RAW_RESULTS: "results_raw_"
   POSTFIX_RAW_RESULTS: "csv"
 
   SAVE_FINAL_RESULTS: 1     # 1 ... yes 0 ... no
-  PATH_FINAL_RESULTS: "/data/share/maxrecall_vhh_mmsi/videos/results/sbd/final_results/"
+  PATH_FINAL_RESULTS: "/data/share/maxrecall_vhh_mmsi/develop/videos/results/sbd/final_results/"
   PREFIX_FINAL_RESULTS: "results_"
   POSTFIX_FINAL_RESULTS: "csv"
 
-  PATH_VIDEOS: "/data/share/maxrecall_vhh_mmsi/videos/downloaded/"
-  THRESHOLD_MODE: 'adaptive'    # adaptive OR fixed
+  PATH_VIDEOS: "/data/share/maxrecall_vhh_mmsi/develop/videos/downloaded/"
+  THRESHOLD_MODE: 'fixed'    # adaptive OR fixed
   THRESHOLD: 0.8                 # value [0-1]
   ALPHA: 2.0                     # value > 1
-  WINDOW_SIZE: 100               # only for adaptive mode
+  WINDOW_SIZE: 50               # only for adaptive mode
   BACKBONE_CNN: "squeezenet"    # vgg16 OR squeezenet
   SIMILARITY_METRIC: "cosine"
 
@@ -43,6 +43,10 @@ Visualization:
 
 Evaluation:
   SAVE_EVAL_RESULTS: 1
-  PATH_RAW_RESULTS: "/data/share/maxrecall_vhh_mmsi/videos/results/sbd/raw_results/"
-  PATH_EVAL_RESULTS: "/data/share/maxrecall_vhh_mmsi/videos/results/sbd/develop/"
-  PATH_GT_ANNOTATIONS: "/caa/Projects02/vhh/private/database_nobackup/VHH_datasets/annotations/ShotBoundaryDetection/imediacities/sbd_imc_annotations_20191231.csv"
+  PATH_RAW_RESULTS: "/data/share/maxrecall_vhh_mmsi/develop/videos/results/sbd/raw_results/"
+  PATH_EVAL_RESULTS: "/data/share/maxrecall_vhh_mmsi/develop/videos/results/sbd/develop/"
+  #PATH_GT_ANNOTATIONS: "/caa/Projects02/vhh/private/database_nobackup/VHH_datasets/annotations/ShotBoundaryDetection/imediacities/sbd_imc_annotations_20191231.csv"
+  PATH_GT_ANNOTATIONS: "/data/share/vhh_mmsi_test_db/annotations/sbd/final_results/all_annotations_prepared.csv"
+
+
+
