- update configuration file - modify demo script to read video list from configuration file - modify config path in evaluation script - modifications of video read process (ressource optimization) read video frame by frame and calculate distances on the fly

--- a/config/config_vhh_test.yaml
+++ b/config/config_vhh_test.yaml
@@ -30,7 +30,7 @@ SbdCore:
   SAVE_RAW_RESULTS: 1       # 1 ... yes 0 ... no
   ###
   # This parameter is used to specify the path for saving the raw results.
-  PATH_RAW_RESULTS: "/data/share/maxrecall_vhh_mmsi/develop/videos/results/sbd//"
+  PATH_RAW_RESULTS: "/caa/Homes01/dhelm/working/vhh/develop/results_develop/sbd/raw_results/"
   ###
   # This parameter is used to specify the prefix for the results file.
   PREFIX_RAW_RESULTS: "results_raw_"
@@ -43,7 +43,7 @@ SbdCore:
   SAVE_FINAL_RESULTS: 1     # 1 ... yes 0 ... no
   ###
   # This parameter is used to specify the path for saving the final results.
-  PATH_FINAL_RESULTS: "/data/share/maxrecall_vhh_mmsi/develop/videos/results/sbd/final_results/"
+  PATH_FINAL_RESULTS: "/caa/Homes01/dhelm/working/vhh/develop/results_develop/sbd/final_results/"
   ###
   # This parameter is used to specify the prefix for the results file.
   PREFIX_FINAL_RESULTS: "results_"
@@ -53,10 +53,10 @@ SbdCore:
 
   ###
   # This parameter is used to specify the path to the videos.
-  PATH_VIDEOS: "/data/share/maxrecall_vhh_mmsi/develop/videos/downloaded/"
+  PATH_VIDEOS: "/caa/Homes01/dhelm/working/vhh/releases/vhh_core/videos/"
   ###
   # This parameter is used to specify the threshold mode (adaptive OR fixed).
-  THRESHOLD_MODE: 'fixed'    # adaptive OR fixed
+  THRESHOLD_MODE: 'adaptive'    # adaptive OR fixed
   ###
   # This parameter is used to specify the threshold (only in fixed threshold mode - [0-1]).
   THRESHOLD: 0.8                 # value [0-1]  --> FIXED MODE
@@ -87,10 +87,10 @@ Evaluation:
   SAVE_EVAL_RESULTS: 1
   ###
   # This parameter is used the raw results path.
-  PATH_RAW_RESULTS: "/data/share/maxrecall_vhh_mmsi/develop/videos/results/sbd/raw_results/"
+  PATH_RAW_RESULTS: "/caa/Homes01/dhelm/working/vhh/develop/results_develop/sbd/raw_results/"
   ###
   # This parameter is used to specify the path to store the evaluation results path.
-  PATH_EVAL_RESULTS: "/data/share/maxrecall_vhh_mmsi/develop/videos/results/sbd/develop/"
+  PATH_EVAL_RESULTS: "/caa/Homes01/dhelm/working/vhh/develop/results_develop/sbd/evaluation/"
   ###
   # This parameter is used to groundtruth annotations used for evaluation.
-  PATH_GT_ANNOTATIONS: "/data/share/vhh_mmsi_test_db/annotations/sbd/final_results/all_annotations_prepared.csv"
+  PATH_GT_ANNOTATIONS: "/caa/Projects02/vhh/private/Results/datasets/vhh_mmsi_test_db_v3/annotations/sbd/"
